<resources>
    <string name="app_name">Navali</string>
    <string name="menu_icon">icon</string>
    <string name="ready_complexes">Готовые комплексы</string>
    <string name="my_complexes">Мои программы</string>
    <string name="new_complexes">Добавить новую программу</string>
    <string name="programs">Программы тренировок</string>
    <string name="biceps">Бицепс</string>
    <string name="press">Пресс</string>
    <string name="chest">Грудь</string>
    <string name="legs">Ноги</string>
</resources>